fix(header): use fixed instead of sticky; hide the scrollbar because of an overlay bug. thinking about creating a custom progress bar on the side of the article.

--- a/src/app.css
+++ b/src/app.css
@@ -45,7 +45,7 @@ body::-webkit-scrollbar {
 	overflow-y: auto;
 	overflow-x: hidden;
 
-	scrollbar-width: thin;
+	scrollbar-width: none;
 	scroll-snap-type: y mandatory;
 }
 
